smart search multi embedding POC

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -111,6 +111,7 @@ services:
     depends_on:
       - database
     restart: unless-stopped
+    command: ["python", "-m", "immich_ml"]
     healthcheck:
       disable: false
 
